Removido código de testes