@@ -7,6 +7,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.junit4.SpringRunner;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.Assert.*;
@@ -39,7 +40,7 @@ public class PessoaServiceTestIT {
         pessoaService.save(pessoa1);
 
         try {
-            pessoaService.save(List.of(pessoa2, pessoa1));
+            pessoaService.save(Arrays.asList(pessoa2, pessoa1));
         } catch (Exception e) {
             List<Pessoa> pessoas = pessoaService.findAll();
             Pessoa pessoaEncontrada = pessoas.get(0);
